# cli-haskell

./: cli-haskell.cabal
app/: Main.hs
src/App/: Main.hs
