cabal-version:      2.4
name:               cli-haskell
version:            0.1.0.0
-- synopsis: Haskell by example
-- description:
--     Project implementation of the haskell by example website
--     which in turn is a reimplementation of go-by-example.
-- bug-reports:
-- license:            GPL
author:             hjalmar jakobsson
maintainer:         hjalmar.jakobsson@telia.com
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
     default-language:  Haskell2010
     ghc-options:       -Wall

library
    import:             shared-properties
    hs-source-dirs:     src
    build-depends:      base >= 4
    exposed-modules:    App.Main
    default-language:   Haskell2010

executable cli-haskell
    main-is:            Main.hs
    build-depends:      base >= 4, cli-haskell
    default-language:   Haskell2010
    hs-source-dirs:     app
